--- a/nti.html
+++ b/nti.html
@@ -37,7 +37,7 @@
             <div class="nav-mobile"><a id="nav-toggle" href="#"><span></span></a></div>
             <ul class="nav-list">
                <li>
-                  <a href="#">ТОЧКА КИПЕНИЯ</a>
+                  <a href="index.html">Движение НТИ</a>
                </li>
 
                <li>
@@ -67,21 +67,34 @@
                   </ul>
                </li>
                <li>
-                  <a href="#aims">Наши цели</a>
+                  <a href="#nti">Повестка</a>
                </li>
                <li>
-                  <a href="#mission">Наши миссия</a>
+                  <a href="#nti2">Сейчас</a>
                </li>
                <li>
-                  <a href="role">Возможности</a>
+                  <a href="#nti3">Будущее</a>
                </li>
                <li>
-                  <a href="#">Контакты</a>
+                  <a href="#nti4">Эффекты</a>
+               </li>
+               <li>
+                  <a href="#nti5">Ссылки</a>
                </li>
             </ul>
          </nav>
       </div>
    </section>
+   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+   <script src="script.js"></script>
+
+   <div class="sidenav">
+      <a href="#about">Поиск</a>
+      <a href="#services">Сортировка</a>
+      <a href="#clients">Фильтрация</a>
+      <a href="#contact">Добавить</a>
+      <a href="#contact">Редактировать</a>
+   </div>
 
    <section id="nti">
 
@@ -145,6 +158,22 @@
          <h1>Эффекты</h1>
          <img src="img/effects.jpeg" class="par2" alt="">
          <h2>20% проектов по ПД посвящены НТИ</h2>
+      </div>
+
+   </section>
+
+   <section id="nti5">
+
+      <div class="povestka">
+         <h1>Полезные ссылки</h1>
+
+         <a href="https://asi.ru" target="_blank">АСИ TEAM</a>
+         <a href="https://www.facebook.com/2035nti/" target="_blank">ФОРСАЙТ НТИ</a>
+         <a href="https://www.facebook.com/nti2035/" target="_blank">ССЫЛКА</a>
+         <a href="http://www.nti2035.ru/" target="_blank">ССЫЛКА</a>
+
+
+
       </div>
 
    </section>
