--- a/university35.html
+++ b/university35.html
@@ -27,52 +27,72 @@
 </head>
 
 <body>
-   <header>
-      <script src="script.js"></script>
-      <div class="topnav" id="myTopnav">
-
-         <a href="index.html" class="active">ТОЧКА КИПЕНИЯ</a>
-         <a href="#news">Мы сегодня</a>
-         <a href="#contact">Мы в будущем</a>
-         <a href="#contact">Эффекты</a>
-         <a href="#contact">Контакты</a>
-
-         <div>
-            <button class="btn btn-secondary  dropdown-toggle header__dropdown" type="button" id="dropdownMenu2"
-               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               Направления
-            </button>
-            <div class="dropdown-menu header__dropdown_menu" aria-labelledby="dropdownMenu2">
-               <a href="nti.html">Движение НТИ</a>
-               <button class="dropdown-item" type="button">Сквозные технологии</button>
-               <button class="dropdown-item" type="button">Кружковое движение</button>
-               <button class="dropdown-item" type="button">Университет 2035</button>
-               <button class="dropdown-item" type="button">Точка роста</button>
-               <button class="dropdown-item" type="button">Наставничество</button>
-               <button class="dropdown-item" type="button">Кадры в ЦЭ</button>
-            </div>
+   <section class="nav-bar">
+      <div class="nav-container">
+         <div class="brand">
+            <a href="index.html"><img src="img/icon.png" alt=""></a>
          </div>
+         <nav>
+            <div class="nav-mobile"><a id="nav-toggle" href="#"><span></span></a></div>
+            <ul class="nav-list">
+               <li>
+                  <a href="#">Университет 2035</a>
+               </li>
 
-
-         <div class="sidenav">
-            <a href="#about">Поиск</a>
-            <a href="#services">Сортировка</a>
-            <a href="#clients">Фильтрация</a>
-            <a href="#contact">Добавить</a>
-            <a href="#contact">Редактировать</a>
-         </div>
-
-
-
-
-
-         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-         </a>
+               <li>
+                  <a href="#">Направления</a>
+                  <ul class="nav-dropdown">
+                     <li>
+                        <a href="nti.html">Движение НТИ</a>
+                     </li>
+                     <li>
+                        <a href="#">Сквозные технологии</a>
+                     </li>
+                     <li>
+                        <a href="#">Кружковое Движение</a>
+                     </li>
+                     <li>
+                        <a href="university35.html">Университет 2035</a>
+                     </li>
+                     <li>
+                        <a href="#">Точка роста</a>
+                     </li>
+                     <li>
+                        <a href="#">Наставничество</a>
+                     </li>
+                     <li>
+                        <a href="#">Кадры в ЦЭ</a>
+                     </li>
+                  </ul>
+               </li>
+               <li>
+                  <a href="#welcome">О нас</a>
+               </li>
+               <li>
+                  <a href="#news">Новости</a>
+               </li>
+               <li>
+                  <a href="#activities">Мероприятия</a>
+               </li>
+               <li>
+                  <a href="#news">Контакты</a>
+               </li>
+            </ul>
+         </nav>
       </div>
+   </section>
+
+   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+   <script src="script.js"></script>
 
 
-   </header>
+   <div class="sidenav">
+      <a href="#about">Поиск</a>
+      <a href="#services">Сортировка</a>
+      <a href="#clients">Фильтрация</a>
+      <a href="#contact">Добавить</a>
+      <a href="#contact">Редактировать</a>
+   </div>
 
    <section id="welcome">
       <div class="about">
@@ -103,9 +123,13 @@
       <div class="activities">
 
          <h1>Мероприятия</h1>
+         <a>Читай о них сслыке на группу в вк, но сначала ее надо поймать (она в квадратике )</a>
          <img src="img/act.png" class="param2" alt="">
 
-         <div class="square"></div>
+         <a href="https://vk.com/university2035">
+            <div class="square"></div>
+         </a>
+
 
       </div>
 
